--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 	<canvas id="canvas"></canvas>
 	<script src="tile.js"></script>
+	<script src="camera.js"></script>
+	<script src="world.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
