--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="tile.js"></script>
 	<script src="camera.js"></script>
 	<script src="world.js"></script>
+	<script src="object.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
