--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="camera.js"></script>
 	<script src="world.js"></script>
 	<script src="object.js"></script>
+	<script src="input.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
