Rename the Object class to the Entity class, because the name Object was causing problems.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	<script src="tile.js"></script>
 	<script src="camera.js"></script>
 	<script src="world.js"></script>
-	<script src="object.js"></script>
+	<script src="entity.js"></script>
 	<script src="input.js"></script>
+	<script src="player.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
