Add a pause button.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 				<h1>Welcome</h1>
 				<button>Play</button>
 			</div>
+			<div id="pause_play" style="display:none;">
+				<button>&#x23F8</button>
+			</div>
 		</div>
 		<!-- <div id="title_screen">
 			<h1>Game</h1>
