--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<script src="input.js"></script>
 	<script src="player.js"></script>
 	<script src="game.js"></script>
+	<script src="enemy.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
