Add a load world button.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 			<div id="start_menu">
 				<h1>Welcome</h1>
 				<button>Play</button>
+				<button onclick="document.getElementById('input').click()">Load world</button>
+				<input type="file" accept="application/json" id="input" style="display:none;">
 			</div>
 			<div id="pause_play" style="display:none;">
 				<button>&#x23F8</button>
