--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 	<script src="player.js"></script>
 	<script src="game.js"></script>
 	<script src="enemy.js"></script>
+	<script src="vector.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
