--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="game">
 		<canvas id="game_canvas"></canvas>
 		<div id="gui">
-			<div id="start_menu" class="centered">
+			<div id="start_menu" style="display:none;" class="centered">
 				<h1>Welcome</h1>
 				<button>Play</button>
 				<button>Instructions</button>
