--- a/index.html
+++ b/index.html
@@ -42,16 +42,6 @@
 
 
 
-	<!-- <script src="/inline-console.min.js"></script>  -->
-	<script src="tile.js"></script>
-	<script src="camera.js"></script>
-	<script src="world.js"></script>
-	<script src="entity.js"></script>
-	<script src="input.js"></script>
-	<script src="player.js"></script>
-	<script src="game.js"></script>
-	<script src="enemy.js"></script>
-	<script src="vector.js"></script>
-	<script src="main.js"></script>
+	<script src="main.js" type="module"></script>
 </body>
 </html>
